--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,18 @@ services:
       dockerfile: Dockerfile
     container_name: go-app
     environment:
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
+      DB_HOST: postgres-db
+      DB_PORT: ${APP_DB_PORT}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      APP_PORT: ${APP_PORT}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_SECRET_REFRESH: ${JWT_SECRET_REFRESH}
     depends_on:
       - postgres
+    networks:
+      - app-network
     ports:
       - "${APP_PORT}:${APP_PORT}"
 
