--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,30 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch go",
-            "type": "go",
-            "request": "launch",
-            "mode": "debug",
-            "program": "${workspaceFolder}/cmd/main.go"
-          }
-    ]
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "Launch go",
+			"type": "go",
+			"request": "launch",
+			"mode": "debug",
+			"program": "${workspaceFolder}/cmd/app",
+			"env": {
+				"DB__HOST": "localhost",
+				"DB__PORT": "5439",
+				"DB__USER": "postgres",
+				"DB__PASSWORD": "password",
+				"DB__NAME": "eventuredb",
+				"APP__PORT": "5001",
+				"JWT__SECRET": "dw2YdST9w6G_8ABZsВЈ",
+				"JWT__SECRET_REFRESH": "dw2YdST9w6G_8ABZsВЈ",
+				"GO_ENVIRONMENT": "Development",
+				"LOGGING__CONSOLE__LEVEL": "debug",
+				"LOGGING__LOKI__URL": "http://localhost:3100",
+				"LOGGING__LOKI__LEVEL": "info",
+				"APP__NAME": "eventura"
+			}
+		}
+	]
 }
